// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`closes the overlay if bg is clicked 1`] = `
<DocumentFragment>
  <div
    class="z-[10000] duration-300 ease-in-out opacity-0 fixed grid place-items-center left-0 top-0 w-screen h-screen bg-[rgba(0,0,0,0.5)]"
    data-testid="overlayBg"
  >
    <div
      class="relative popup freeze "
    >
      <div
        class=" grid rounded-md gap-4 shadow-lg p-8 bg-max-white dark:bg-night-black "
      >
        <p>
          Some paragraph
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an overlay wrapper 1`] = `
<DocumentFragment>
  <div
    class="z-[10000] duration-300 ease-in-out opacity-100 fixed grid place-items-center left-0 top-0 w-screen h-screen bg-[rgba(0,0,0,0.5)]"
    data-testid="overlayBg"
  >
    <div
      class="relative popup freeze "
    >
      <div
        class=" grid rounded-md gap-4 shadow-lg p-8 bg-max-white dark:bg-night-black "
      >
        <p>
          Some paragraph
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
